<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp" tools:srcCompat="@tools:sample/avatars[0]"
            android:id="@+id/im_restaurant"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            app:layout_constraintTop_toTopOf="@+id/tv_restaurant_name"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/app_name"/>
    <TextView
            android:text="@string/restaurant_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tv_restaurant_name" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toEndOf="@+id/im_restaurant" android:layout_marginStart="16dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="16dp"/>
    <TextView
            android:text="@string/restaurant_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tv_restaurant_description" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="@+id/tv_restaurant_name" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_restaurant_name"/>
    <TextView
            android:text="@string/delivery_fee"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tv_delivery_fee" app:layout_constraintStart_toStartOf="@+id/tv_restaurant_description"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/tv_restaurant_description"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="16dp"/>
    <TextView
            android:text="@string/status"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tv_status" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintTop_toTopOf="@+id/tv_delivery_fee"
            app:layout_constraintBottom_toBottomOf="@+id/tv_delivery_fee"
            app:layout_constraintStart_toEndOf="@+id/tv_delivery_fee" android:layout_marginStart="8dp"/>
</android.support.constraint.ConstraintLayout>
