<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".RestaurantDetailsActivity">

    <TextView
            android:text="@string/restaurant_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tv_restaurant_name" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="16dp" app:layout_constraintTop_toTopOf="parent" android:textAlignment="center"
            android:textSize="18sp" android:textStyle="bold"/>
    <RatingBar
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:max="5"
            android:id="@+id/rb_rating"
            app:layout_constraintTop_toBottomOf="@+id/tv_restaurant_name" android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"/>
    <TextView
            android:text="@string/restaurant_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tv_description" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@+id/rb_rating" android:layout_marginTop="16dp"/>
    <TextView
            android:text="@string/delivery_fee"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tv_fee" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_description" android:layout_marginTop="8dp"
            app:layout_constraintEnd_toStartOf="@+id/tv_status" android:layout_marginEnd="8dp"/>
    <TextView
            android:text="@string/status"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tv_status" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintTop_toTopOf="@+id/tv_fee" app:layout_constraintBottom_toBottomOf="@+id/tv_fee"/>
    <TextView
            android:text="@string/cell_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tv_cell_no" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/tv_fee"/>
    <TextView
            android:text="@string/total_rating"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tv_total_rating" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintTop_toTopOf="@+id/rb_rating" app:layout_constraintBottom_toBottomOf="@+id/rb_rating"
            app:layout_constraintStart_toEndOf="@+id/rb_rating" android:layout_marginStart="8dp"/>
</android.support.constraint.ConstraintLayout>